--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,13 @@ go:
   - "1.10"
   - "1.11"
   - tip
+  - master
+os:
+  - linux
+  - osx
+dist: trusty
+sudo: false
+install: true
+script:
+  - env GO111MODULE=on go build
+  - env GO111MODULE=on go test
