--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ dist: trusty
 sudo: false
 install: true
 script:
-  - env GO111MODULE=on go build
-  - env GO111MODULE=on go test
+  - env GO111MODULE=on go build ./...
+  - env GO111MODULE=on go test ./...
